fixed div alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1109,6 +1109,7 @@ i:before {
   flex-direction: column;
   justify-content: space-between;
   width: 80vw;
+  margin-left: 10vw;
   margin-top: 30px;
   margin-bottom: 50px;
   align-items: center;
